recursion.lessons.recursion.koch.Koch.scala.error
Koch:15: error: not found: value snowside
	snowside(levels,length);
        ^Koch:18: error: not found: value snowside
	snowside(levels,length);
        ^